--- a/src/main/java/hu/distributeddocumentor/gui/SplittedPageView.form
+++ b/src/main/java/hu/distributeddocumentor/gui/SplittedPageView.form
@@ -53,14 +53,14 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <Component id="tbtVerticalSplit" min="-2" pref="24" max="-2" attributes="0"/>
+                  <Component id="tbtVerticalSplit" min="-2" pref="32" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="tbtHorizontalSplit" min="-2" pref="24" max="-2" attributes="0"/>
+                  <Component id="tbtHorizontalSplit" min="-2" pref="32" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="tbtFloatingPreview" min="-2" pref="24" max="-2" attributes="0"/>
+                  <Component id="tbtFloatingPreview" min="-2" pref="32" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="tbtHiddenPreview" min="-2" pref="24" max="-2" attributes="0"/>
-                  <EmptySpace pref="165" max="32767" attributes="0"/>
+                  <Component id="tbtHiddenPreview" min="-2" pref="32" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="cbStatus" min="-2" pref="152" max="-2" attributes="0"/>
