--- a/src/main/java/hu/distributeddocumentor/gui/PagePropertiesDialog.form
+++ b/src/main/java/hu/distributeddocumentor/gui/PagePropertiesDialog.form
@@ -6,6 +6,7 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
   <Events>
     <EventHandler event="windowClosing" listener="java.awt.event.WindowListener" parameters="java.awt.event.WindowEvent" handler="closeDialog"/>
@@ -29,7 +30,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace min="0" pref="146" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="154" max="32767" attributes="0"/>
                       <Component id="okButton" linkSize="1" min="-2" pref="67" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="cancelButton" linkSize="1" min="-2" max="-2" attributes="0"/>
@@ -45,7 +46,7 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="tbTitle" max="32767" attributes="0"/>
                           <Component id="tbID" alignment="0" max="32767" attributes="0"/>
-                          <Component id="cbMarkupLanguage" alignment="0" pref="224" max="32767" attributes="0"/>
+                          <Component id="cbMarkupLanguage" alignment="0" pref="232" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -122,7 +123,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jLabel5" pref="312" max="32767" attributes="0"/>
+                  <Component id="jLabel5" pref="320" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
