Fix of Issue #74

--- a/src/main/java/hu/distributeddocumentor/gui/SplittedPageView.form
+++ b/src/main/java/hu/distributeddocumentor/gui/SplittedPageView.form
@@ -53,13 +53,13 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <Component id="tbtVerticalSplit" min="-2" pref="32" max="-2" attributes="0"/>
+                  <Component id="tbtVerticalSplit" min="-2" pref="40" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="tbtHorizontalSplit" min="-2" pref="32" max="-2" attributes="0"/>
+                  <Component id="tbtHorizontalSplit" min="-2" pref="40" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="tbtFloatingPreview" min="-2" pref="32" max="-2" attributes="0"/>
+                  <Component id="tbtFloatingPreview" min="-2" pref="40" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="tbtHiddenPreview" min="-2" pref="32" max="-2" attributes="0"/>
+                  <Component id="tbtHiddenPreview" min="-2" pref="40" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
@@ -78,7 +78,7 @@
                       </Group>
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="tbtVerticalSplit" alignment="0" pref="23" max="32767" attributes="0"/>
+                              <Component id="tbtVerticalSplit" alignment="0" max="32767" attributes="0"/>
                               <Component id="tbtHiddenPreview" pref="0" max="32767" attributes="0"/>
                               <Component id="tbtFloatingPreview" pref="0" max="32767" attributes="0"/>
                               <Component id="tbtHorizontalSplit" pref="0" max="32767" attributes="0"/>
