--- a/src/main/resources/documentation.css
+++ b/src/main/resources/documentation.css
@@ -1,22 +1,27 @@
 body 
 {
-	font-family: Calibri, Verdana, Arial, Helvetica, sans-serif;	
+    font-family: Calibri, Verdana, Arial, Helvetica, sans-serif;	
 }
 
 p
 {
-	text-align: justify;	
+    text-align: justify;	
+}
+
+h1
+{
+    color: #3333ff;
 }
 
 a:link, a:visited, a:active
 {	
-	color: blue;
-	text-decoration: none;
+    color: blue;
+    text-decoration: none;
 }
 
 a:hover
 {
-	color: red;
+    color: red;
 }
 
 .inlinecode
