--- a/src/main/java/hu/distributeddocumentor/gui/SettingsDialog.form
+++ b/src/main/java/hu/distributeddocumentor/gui/SettingsDialog.form
@@ -6,6 +6,7 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
   <Events>
     <EventHandler event="windowClosing" listener="java.awt.event.WindowListener" parameters="java.awt.event.WindowEvent" handler="closeDialog"/>
@@ -169,7 +170,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="lbMercurialURL">
           <Properties>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;a href=&quot;http://mercurial.selenic.com/downloads/&quot;&gt;http://mercurial.selenic.com/downloads/&lt;/a&gt;&lt;/html&gt;"/>
+            <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;a href=&quot;https://www.mercurial-scm.org/wiki/Download&quot;&gt;https://www.mercurial-scm.org/wiki/Download&lt;/a&gt;&lt;/html&gt;"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Hand Cursor"/>
             </Property>
