--- a/src/main/java/hu/distributeddocumentor/gui/MainWindow.form
+++ b/src/main/java/hu/distributeddocumentor/gui/MainWindow.form
@@ -93,6 +93,16 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="spellCheckingMenuItemActionPerformed"/>
               </Events>
             </MenuItem>
+            <MenuItem class="javax.swing.JPopupMenu$Separator" name="jSeparator6">
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="customizeStylesheetMenuItem">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Customize stylesheet"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="customizeStylesheetMenuItemActionPerformed"/>
+              </Events>
+            </MenuItem>
           </SubComponents>
         </Menu>
         <Menu class="javax.swing.JMenu" name="synchronizeMenu">
