--- a/src/main/resources/documentation.css
+++ b/src/main/resources/documentation.css
@@ -1,6 +1,6 @@
 body 
 {
-    font-family: MS PGothic, Calibri, Verdana, Arial, Helvetica, sans-serif;	
+    font-family: Calibri, Verdana, Arial, Helvetica, sans-serif;	
 }
 
 p
